--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <body class="app">
+    <%= render partial: "layouts/shared/header" %>
 
-    <%= yield %>
+    <div class="app-wrapper">
+      <div class="app-content pt-3 p-md-3 p-lg-4">
+          <div class="container-xl">			    
+            <%= content_for?(:content) ? yield(:content) : yield %>
+          </div><!--//container-fluid-->
+      </div><!--//app-content-->  
+
+      <%= render partial: "layouts/shared/footer" %>  
+    </div><!--//app-wrapper-->  
   </body>
 </html>
