--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 
     <div class="app-wrapper">
       <div class="app-content pt-3 p-md-3 p-lg-4">
-          <div class="container-xl">			    
+          <div class="container-xl">
+            <%= render "layouts/shared/alertas" %>			    
             <%= content_for?(:content) ? yield(:content) : yield %>
           </div><!--//container-fluid-->
       </div><!--//app-content-->  
