--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,49 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="app-auth-body mx-auto">	
+	<div class="app-auth-branding mb-4">
+		<a class="app-logo" href="<%= root_path %>">
+			<%= image_pack_tag "media/images/app-logo.svg", class: "logo-icon me-2" %>
+		</a>
+	</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+	<h2 class="auth-heading text-center mb-4">Editar Informações</h2>					
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+		<div class="auth-form-container text-start mx-auto">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "auth-form auth-signup-form", html: { method: :put }) do |f| %>
+				<div class="mb-3">
+					<%= f.label :name, class: "sr-only" %>
+					<%= f.text_field :name, class: "form-control", placeholder: true, require: true %>
+				</div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+				<div class="mb-3">
+					<%= f.label :email, class: "sr-only" %>
+					<%= f.email_field :email, class: "form-control", placeholder: true, require: true %>
+				</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+				<div class="mb-3">
+          <div id="passwordhelp" class="form-text">Deixe em branco se você não deseja atualizar sua senha</div>
+					<%= f.label :password, class: "sr-only" %>
+					<%= f.password_field :password, class: "form-control", placeholder: true, require: true %>
+					<% if @minimum_password_length %>
+						<div id="passwordhelp" class="form-text">A senha deve conter no mínimo <%= @minimum_password_length %> caracteres.</div>
+					<% end %>
+				</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+				<div class="mb-3">
+					<%= f.label :password_confirmation, class: "sr-only" %>
+					<%= f.password_field :password_confirmation, class: "form-control", placeholder: true, require: true %>
+				</div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+        <div class="mb-3">
+					<%= f.label :current_password, class: "sr-only" %>
+					<%= f.password_field :current_password, class: "form-control", placeholder: true, require: true %>
+          <div id="passwordhelp" class="form-text">É necessário confirmar a senha atual</div>
+				</div>
+					
+				<div class="text-center">
+					<%= f.submit "Atualizaar cadastro", class: "btn app-btn-primary w-100 theme-btn mx-auto" %>
+				</div>
+			<% end %><!--//auth-form-->
+	</div><!--//auth-form-container-->					    
+</div>
