adding error messages on devise screens

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "devise/shared/error_messages", resource: resource %>
+
 <div class="app-auth-body mx-auto">	
 	<div class="app-auth-branding mb-4">
 		<a class="app-logo" href="<%= root_path %>">
