--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,12 +1,13 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
+  <div id="error_explanation" class="alert alert-warning" role="alert">
+    <p>
+      <%#= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
-    <ul>
+    </p>
+    <%# <ul class="list-unstyled"> %>
+    <ul class="list-inline">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
