--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="app-wrapper">
       <div class="app-content pt-3 p-md-3 p-lg-4">
           <div class="container-xl">
-            <%= render "layouts/shared/alertas" %>			    
+            <%= render "layouts/shared/alerts" %>			    
             <%= content_for?(:content) ? yield(:content) : yield %>
           </div><!--//container-fluid-->
       </div><!--//app-content-->  
