--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -13,7 +13,7 @@
 
   <body class="app app-login p-0">
     <div class="row g-0 app-auth-wrapper">
-      <%= render "layouts/shared/alertas" %>
+      <%= render "layouts/shared/alerts" %>
       <div class="auth-main-col text-center p-5"> <!-- col-12 col-md-7 col-lg-6 -->
         <div class="d-flex flex-column align-content-end">
           <!-- CONTEUDO PRINCIPAL -->
