--- a/app/views/layouts/shared/_alerts.html.erb
+++ b/app/views/layouts/shared/_alerts.html.erb
@@ -12,7 +12,7 @@
 
 
 
-<div id="div-alertas">
+<div id="div-alerts">
   <% if flash[:notice].present? %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
