--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Book</h1>
+<h1 class="app-page-title">Editar Livro</h1>
+<hr class="mb-4">
 
-<%= render 'form', book: @book %>
-
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<div class="row g-4">
+  <div class="col-md-12">
+      <div class="app-card app-card-settings shadow-sm p-4">						    
+      <div class="app-card-body">
+        <%= render 'form', book: @book %>
+      </div><!--//app-card-body-->						    
+    </div><!--//app-card-->
+  </div>
+</div>
