--- a/app/javascript/packs/stylesheets/favorite_books.css
+++ b/app/javascript/packs/stylesheets/favorite_books.css
@@ -2,3 +2,13 @@
   max-width: 50%;
   max-height: 50%;
 }
+
+.page-link {
+  color: #15a362 !important;
+}
+
+.page-item.active .page-link {
+  background-color: #15a362 !important;
+  border-color: #15a362 !important;
+  color: #fff !important;
+}
