--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,9 +20,9 @@
             <thead>
               <tr>
                 <th class="cell">Título</th>
-                <th class="cell">Author</th>
-                <th class="cell">Páginas</th>
-                <th class="cell">Adição</th>
+                <th class="cell">Autor</th>
+                <th class="cell">Nº Páginas</th>
+                <th class="cell">Adicionado em</th>
                 <th class="cell"></th>
               </tr>
             </thead>
@@ -66,6 +66,8 @@
           </table>
         </div><!--//table-responsive-->
       </div><!--//app-card-body-->		
-    </div><!--//app-card-->
+    </div><!--//app-card-->    
+    
+    <%= render 'layouts/shared/kaminari_infos', list: @books %>
   </div><!--//tab-pane-->
 </div>
