--- a/app/views/books/_filters.html.erb
+++ b/app/views/books/_filters.html.erb
@@ -1,33 +1,41 @@
-<div class="page-utilities">
-  <div class="row g-2 justify-content-start justify-content-md-end align-items-center">
-    <div class="col-auto">
-      <form class="table-search-form row gx-1 align-items-center">
-        <div class="col-auto">
-          <input type="text" id="search-orders" name="searchorders" class="form-control search-orders" placeholder="Texto contido no título e descrição">
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn app-btn-secondary">Buscar</button>
-        </div>
-      </form>                
-    </div><!--//col-->
+<div class="row g-3 mb-1 align-items-end">
+  <div class="page-utilities">
+    <div class="row g-2">
+      <%= form_tag(books_path, :method => "GET", role: "form", class: "table-search-form row gx-1 align-items-center", id: "form-books-filter", remote: false) do %>   
+        <div class="col-md-6 mb-3">
+          <%= text_field_tag(:contains_text, params[:contains_text], placeholder: "Texto contido no título e descrição", class: "form-control") %>  
+        </div><!--//col-->
 
-    <div class="col-auto">          
-      <select class="form-select w-auto">
-        <option value="option-1">Recentemente adicionado</option>
-        <option value="option-2">Mais antigo</option>
-        <option value="option-3">Título A-Z</option>
-        <option value="option-4">Título Z-A</option>            
-      </select>
-    </div>
+        <div class="col-md-5  mb-3">
+          <%= text_field_tag(:with_author, params[:with_author], placeholder: "Nome do autor", class: "form-control") %>          
+        </div>
 
-    <div class="col-auto">
-      <%= link_to new_book_path, class: "btn app-btn-primary" do -%>						    
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-        </svg>
-        Novo Livro
-      </a>
+        <div class="col-md-1  mb-3">
+          <button type="submit" class="btn app-btn-secondary text-rigth", id="filter-button">Buscar</button>
+        </div>
+
       <% end %>
-    </div>
-  </div><!--//row-->
-</div><!--//table-utilities-->
+    </div><!--//row-->
+  </div><!--//table-utilities-->
+</div><!--//col-auto-->
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    update_form_before_submit = function(form_id) {
+      // not implemented
+    }
+    
+    $("#filter-button").on('click', function(event) {
+      event.preventDefault();
+
+      form_id = '#form-books-filter'
+      inputs_hash = getInputs(form_id)
+      params_ignore_list = Object.keys(inputs_hash)
+      params = getParameters()
+
+      update_form_fields(form_id, params, params_ignore_list)
+      
+      $(form_id).submit();
+    });
+  });
+</script>
