--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,7 @@
 
       <%= render partial: "layouts/shared/footer" %>  
     </div><!--//app-wrapper-->  
+
+    <%= yield :javascript %>
   </body>
 </html>
