--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -29,5 +29,8 @@
         </div><!--//flex-column-->   
       </div><!--//auth-main-col-->  
     </div><!--//row-->	
+
+    <%= yield :javascript %>
+    
   </body>
 </html>
