refactoring: removing pack/images folder and updating references to images

--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -44,3 +44,5 @@ $theme-colors: (
 
 /*************************** Import Custom Template  *****************************/
 @import "./custom/portal";
+
+@import "./favorite_books";
