--- a/app/views/layouts/shared/_notifications_options.html.erb
+++ b/app/views/layouts/shared/_notifications_options.html.erb
@@ -15,7 +15,7 @@
         <div class="row gx-2 justify-content-between align-items-center">
           <div class="col-auto">
           <%# <img class="profile-image" src="profiles/profile-1.png" alt=""> %>
-              <%= image_pack_tag "media/images/profiles/profile-1.png", class: "profile-image" %>
+              <%= image_tag "images/profiles/profile-1.png", class: "profile-image" %>
           </div><!--//col-->
           <div class="col">
             <div class="info"> 
@@ -71,7 +71,7 @@
         <div class="row gx-2 justify-content-between align-items-center">
           <div class="col-auto">
           <%# <img class="profile-image" src="assets/images/profiles/profile-2.png" alt=""> %>
-                              <%= image_pack_tag "profiles/profile-1.png", class: "profile-image" %>
+                              <%= image_tag "profiles/profile-1.png", class: "profile-image" %>
           </div><!--//col-->
           <div class="col">
             <div class="info"> 
